# mdns-alias

./: .gitignore  ChangeLog.md  LICENSE  Makefile.am  README.md  configure.ac
.github/: CODEOWNERS
.github/workflows/: build.yml  coverity.yml  release.yml
src/: Makefile.am  mdns-alias.c
